fixed: menu did not overlap on small screens

--- a/www/pgm2/flexstyle.css
+++ b/www/pgm2/flexstyle.css
@@ -75,6 +75,7 @@ select { font-size: 0.85em; margin: 0; -webkit-appearance: menulist; height: 1.3
 #menu div {	padding: 4px 8px; }
 @media all and (max-width: 800px) {	
 	#menu div {	padding: 8px; }
+	#content, #hdr { left: 0px; }
 }
 /* Hyperlinks */
 #menu a {
